--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -30,3 +30,7 @@ h1 {
     width: 100%;
     height: 100%;
 }
+
+.nav-item.avatar>a.nav-link.dropdown-toggle::before, .nav-item.avatar>a.nav-link.dropdown-toggle::after {
+    display: none !important;
+}
